fix(general): bug on iPhones fixed and btn contact added on navbar

--- a/src/styles/pages/homepage/customers.css
+++ b/src/styles/pages/homepage/customers.css
@@ -1,6 +1,6 @@
 /* ! resizing cards */
 .customers__img-resize {
-  max-height: 35vh;
+  height: 35vh !important;
 }
 @media (min-width: 640px) and (max-width: 1024px) {
   .customers__container--card-resize {
